[build-system]
requires = ["setuptools>=77", "packaging >= 24.2", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergl"
version = "1.0.1"
description = "High Performance, Modernized OpenGL wrapper"
readme = "README.md"
authors = [{name = "Mai Huy Hiếu"}]
license = "MIT"
# 3.13 is the first stable release with free-threading support. 
requires-python = ">=3.13" 
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[tool.setuptools]
packages = ["hypergl", "hypergl-stubs"]
include-package-data = true

[tool.isort]
line_length = 120
multi_line_output = 5
include_trailing_comma = true
known_first_party = ["hypergl"]